# haqu

./: README.md  haqu.cabal
app/: Main.hs
data/: q0.txt  q1.txt  q2.txt
data/q0/: andrea.txt  sophia.txt
data/q1/: hans.txt  martina.txt
data/q2/: susanne.txt
lib/Haqu/: DataHandler.hs  FileReader.hs  Model.hs  QuizFileReader.hs  Web.hs
lib/Haqu/Components/: Form.hs  Helper.hs
lib/Haqu/Model/: Answer.hs  KeyValue.hs  Quiz.hs
lib/Haqu/Pages/: Home.hs  QuizPlayer.hs  QuizQuestion.hs  QuizResult.hs
static/: form_example.html  styles.css
test/: HaquTest.hs
